--- a/htmx/index.html
+++ b/htmx/index.html
@@ -1,17 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../static/styles.css" />
+
     <title>bxra2 Hardware Monitor</title>
   </head>
+
   <body>
-    <h1>HELLO</h1>
+    <div class="col-sm-6 container mt-4">
+      <h1>bxra2's Hardware Monitor</h1>
+      <p id="#update-timestamp"></p>
+      <div hx-ext="ws" ws-connect="ws://localhost:8080/ws">
+        <div class="container">
+          <!-- -----------------Table 1------------------- -->
+          system
+          <div id="system-data"></div>
+          <!-- -----------------Table 2------------------- -->
+          disk
+          <div id="disk-data"></div>
+          <!-- -----------------Table 3------------------- -->
+          cpu
+          <div id="cpu-data"></div>
+        </div>
+      </div>
 
-    <div id="system-data"></div>
-    <div id="disk-data"></div>
-
-    <div id="cpu-data"></div>
 
     <script
       src="https://unpkg.com/htmx.org@1.9.12"
@@ -20,5 +54,10 @@
     ></script>
 
     <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/ws.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
